# embrio-thesis

./: .gitignore  pyproject.toml
notebooks/: 02_convert_pdb.ipynb
src/: app.py  data.py
src/models/: baseline.py  cnn.py  transformer.py
src/scripts/: split_PGT-A.sh
