[project]
name = "embrio-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pytorch-lightning>=2.6.1",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "wandb>=0.25.1",
]
